--- a/css/default.css
+++ b/css/default.css
@@ -41,8 +41,16 @@ body {
     align-items: flex-start;
 }
 
+@media screen and (max-width: 480px) and (min-width: 320px) {
+    * {
+        box-sizing: border-box;
+    }
+}
+
 .left {
-    flex: 1 0 calc(40%);
+    float: left;
+    clear: none;
+    /* flex: 1 0 calc(40%); */
 }
 .left img {
     width: 160px;
@@ -50,7 +58,11 @@ body {
     border-radius: 100px
 }
 .right {
-    flex: 1 0 calc(60%);
+    float: left;
+    clear: none;
+    margin-left: 24px;
+    min-width: 276px;
+    /* flex: 1 0 calc(60%); */
 }
 
 ul {
