--- a/css/default.css
+++ b/css/default.css
@@ -34,35 +34,26 @@ body {
 
 .body {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     justify-content: space-around;
-    width: 460px;
-    margin: 3rem auto;
     align-items: flex-start;
-}
-
-@media screen and (max-width: 480px) and (min-width: 320px) {
-    * {
-        box-sizing: border-box;
-    }
+    margin: 3rem auto;
 }
 
 .left {
-    float: left;
-    clear: none;
-    /* flex: 1 0 calc(40%); */
+    margin: auto;
+    width: 184px;
 }
+
 .left img {
     width: 160px;
     height: auto;
-    border-radius: 100px
+    border-radius: 100px;
 }
+
 .right {
-    float: left;
-    clear: none;
-    margin-left: 24px;
-    min-width: 276px;
-    /* flex: 1 0 calc(60%); */
+    margin: auto;
+    width: 276px;
 }
 
 ul {
