--- a/templates/default.html
+++ b/templates/default.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Boris Buliga">
     <title>$siteTitle$ - $title$</title>
     <link rel="stylesheet" href="/css/default.css" />
+    <link rel="stylesheet" href="/css/$group$.css" />
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i|Open+Sans:300,300i,600&amp;subset=latin-ext" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
