--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -2,7 +2,9 @@
   <ul>
     $for(posts)$
     <li>
-      <a href="$url$">$title$</a> - $date$ - $tags$
+      <a href="$url$">$title$</a> - $date$ - <i class="post-list-tags">($tags$)</i>
+      <!-- <p class="post-list-element-tile"><a href="$url$">$title$</a> - $date$</p> -->
+      <!-- <p class="post-list-element-subtitle">($tags$)</p> -->
     </li>
     $endfor$
   </ul>
