--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,7 +1,7 @@
 <article class="post">
   <header>
     <a href="">
-      <h1 class="post-title">Posts tagged with <i>$tag$</i></h1>
+      <h1 class="post-title">Posts tagged with <i class="post-title-tag">$tag$</i></h1>
     </a>
   </header>
   $partial("templates/post-list.html")$
