--- a/templates/post-body.html
+++ b/templates/post-body.html
@@ -16,6 +16,6 @@
     $body$
   </div>
   <footer class="post-footer">
-    <a target="_blank" class="post-footer-sources" href="$sourcesRoot$/$path$">Source: $title$ <i class="fa fa-github fa-2x"></i></a>
+    <a target="_blank" class="post-footer-sources" href="$sourcesRoot$/$path$">Source: $title$ <i class="fa fa-github fa-lg"></i></a>
   </footer>
 </article>
