--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i|Open+Sans:300,300i,600&amp;subset=latin-ext')
+
 h1 {
   font-family: 'Josefin Sans', serif;
   font-size: 20px;
