--- a/templates/default.html
+++ b/templates/default.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/default.css" />
     <link rel="stylesheet" href="/css/$group$.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
   </head>
   <body>
     $body$
