add google analytics

--- a/templates/default.html
+++ b/templates/default.html
@@ -13,5 +13,14 @@
   </head>
   <body>
     $body$
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-101015201-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-101015201-2');
+    </script>
   </body>
 </html>
